--- a/app/src/main/res/layout/activity_lingkaran.xml
+++ b/app/src/main/res/layout/activity_lingkaran.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/bgsignup"
     tools:context=".LingkaranActivity">
 
     <ImageView
@@ -50,6 +51,7 @@
         android:layout_below="@id/gambar1"
         android:paddingTop="20dp"
         android:paddingLeft="10dp"
+        android:layout_marginLeft="5dp"
         android:paddingBottom="10dp"
         android:textSize="16sp"
         android:textColor="@color/hitam"
