--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,13 +45,13 @@
             android:hint="Masukkan Password"/>
 
         <Button
-            android:layout_marginTop="50dp"
-            android:layout_gravity="center"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
             android:background="@drawable/button_kotak_hijau"
-            android:textColor="@color/putih"
-            android:text="LOGIN"/>
+            android:text="LOGIN"
+            android:textColor="@color/putih" />
 
     </LinearLayout>
 
