--- a/app/src/main/res/layout/activity_nama.xml
+++ b/app/src/main/res/layout/activity_nama.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="16dp"
-    android:background="#F5F5F5"
+    android:background="@drawable/bgsignup"
     tools:context=".NamaActivity">
 
     <TextView
@@ -40,7 +40,8 @@
         android:text="OK"
         android:id="@+id/btnOk"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#009688" />
+        android:backgroundTint="#009688"
+        android:textColor="@color/putih"/>
 
     <TextView
         android:layout_width="wrap_content"
