--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/bg"
+    android:layout_height="match_parent"
+    android:background="@drawable/bgsignup"
     android:padding="20dp"
     android:fillViewport="true"
     tools:context=".SignupActivity">
@@ -31,7 +31,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/putih"
+                android:textColor="@color/ijo_gelap"
                 android:textSize="20dp"
                 android:text="Full Name"/>
 
@@ -45,7 +45,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/putih"
+                android:textColor="@color/ijo_gelap"
                 android:textSize="20dp"
                 android:text="Username"/>
 
@@ -59,7 +59,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/putih"
+                android:textColor="@color/ijo_gelap"
                 android:textSize="20dp"
                 android:text="Email"/>
 
@@ -73,7 +73,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/putih"
+                android:textColor="@color/ijo_gelap"
                 android:textSize="20dp"
                 android:text="Password"/>
 
@@ -88,7 +88,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/putih"
+                android:textColor="@color/ijo_gelap"
                 android:textSize="20dp"
                 android:text="Address"/>
 
@@ -102,7 +102,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/putih"
+                android:textColor="@color/ijo_gelap"
                 android:textSize="20dp"
                 android:text="Gender"/>
 
