--- a/app/src/main/res/layout/activity_catatan_external.xml
+++ b/app/src/main/res/layout/activity_catatan_external.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/bgcatatan"
+    android:background="#fffef3"
     tools:context=".CatatanExternalActivity">
     <ImageView
         android:id="@+id/elip1"
@@ -34,27 +34,34 @@
         android:text="Penyimpanan internal"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
 
-    <com.google.android.material.textfield.TextInputLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:paddingHorizontal="5dp"
-        android:layout_marginTop="250dp">
-
+        android:layout_marginTop="250dp"
+        android:layout_marginHorizontal="5dp"
+        app:cardCornerRadius="15dp"
+        android:backgroundTint="#00000000">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/paper">
+        </ImageView>
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:hint="Tulis catatan disini"
             android:inputType="textMultiLine"
-            android:minLines="5" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:minLines="5"/>
+    </androidx.cardview.widget.CardView>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="470dp"
         android:orientation="horizontal">
 
         <Button
@@ -65,6 +72,7 @@
             android:background="@drawable/button_kotak_hijau"
             android:fontFamily="sans-serif"
             android:text="SIMPAN CATATAN"
+            android:textAllCaps="false"
             android:textColor="@color/putih"
             android:textSize="10sp"
             tools:ignore="TouchTargetSizeCheck" />
@@ -81,6 +89,7 @@
             android:background="@drawable/button_kotak_hijau"
             android:fontFamily="sans-serif"
             android:text="LIHAT CATATAN"
+            android:textAllCaps="false"
             android:textColor="@color/putih"
             android:textSize="10sp"
             tools:ignore="TouchTargetSizeCheck" />
@@ -91,7 +100,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="5dp"
-        android:layout_marginTop="450dp"
+        android:layout_marginTop="530dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
 
 </RelativeLayout>
