--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,8 @@
     <LinearLayout
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="30dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -45,6 +46,7 @@
             android:hint="Masukkan Password"/>
 
         <Button
+            android:id="@+id/btn_login"
             android:layout_marginTop="50dp"
             android:layout_gravity="center"
             android:layout_width="200dp"
