--- a/app/src/main/res/layout/activity_nama.xml
+++ b/app/src/main/res/layout/activity_nama.xml
@@ -20,19 +20,19 @@
         android:textColor="#009688" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Nama :"
         android:textColor="#333333"
         android:textSize="18sp" />
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Masukkan Nama Anda"
         android:id="@+id/editNama"
-        android:inputType="text"
-        android:backgroundTint="#009688" />
+        android:layout_width="386dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#009688"
+        android:hint="Masukkan Nama Anda"
+        android:inputType="text" />
 
     <Button
         android:layout_width="wrap_content"
@@ -41,7 +41,8 @@
         android:id="@+id/btnOk"
         android:layout_marginTop="16dp"
         android:backgroundTint="#009688"
-        android:textColor="@color/putih"/>
+        android:textColor="@color/putih"
+        android:background="@drawable/button_shape"/>
 
     <TextView
         android:layout_width="wrap_content"
